[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beedle"
version = "0.0.1"
authors = [
  { name="Johnathan Schaff", email="schaffjohnathan@gmail.com" },
]
description = "Map to Graph translation library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flake8>=4.0.1",
    "loguru>=0.6.0",
    "numpy>=1.22.1",
    "pylint>=2.15.0",
    "pytest>=6.2.5"
]

[project.urls]
"Homepage" = "https://github.com/ctrl-schaff/beedle"
"Bug Tracker" = "https://github.com/ctrl-schaff/beedle/issues"

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.2.5"

# Options
addopts = [
    "-rA",
    "-vv",
    "--doctest-modules",
    "--setup-show",
    "--capture=tee-sys",
    "--tb=line",
    "--durations=0",
    "--showlocals",
    "--strict-markers",
    "--color=yes",
    "--code-highlight=yes",
    "--debug"
]

# Path
norecursedirs = [
    ".svn",
    ".git",
    "_build",
    "tmp*",
    "lib", 
    "lib64",
    "tools"
]
testpaths = [
    "test"
]

# Environment
env = [
    "ROM_PATH = config/zelda2.nes"
]

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)] %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
